# gtcx-core

./: .dockerignore  .env.example  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  GEMINI.md  KIMI.md  LICENSE  README.md  SECURITY-INCIDENT.md  SECURITY.md  baseline.config.ts  commitlint.config.js  eslint.config.js  hygiene.config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  provenance-manifest.json  tsconfig.json  turbo.json  typedoc.json  vitest.workspace.ts
.agent/: README.md  audit-pointer.md  base.md  bout-progress-pointer.md  coordination-pointer.md  credentials-pointer.md  ecosystem-learning-pointer.md  execute-roadmap-pointer.md  execution-bout-pointer.md  git-workflow-pointer.md  kimi-skills-pointer.md  launch-focus-pointer.md  protocol-26-proceed-pointer.md  protocol-27-execution-pointer.md  protocols-enforcement-pointer.md  readiness-pointer.md  session-start-pointer.md  targets.json  universal-agent-behavior.md
.baseline/: bout-progress.config.json  config.json  definition.json  execution-bout.json  launch-focus.json
.changeset/: README.md  agentic-provenance-types.md  ai-async-tracing.md  ai-provenance-tracing.md  api-surface-baseline-2026-05-06.md  canonical-test-vectors.md  config.json  connectivity-ussd-exports.md  continental-predicates-ext1.md  core12-domains-populated.md  crypto-native-hex-validation.md  crypto-native-preflight.md  crypto-pbkdf2.md  fips-provider-aws-lc.md  logging-trace-integration.md  loud-eyes-dance.md  npm-provenance-republish.md  predicate-extension-adr012.md  provenance-pnpm-config.md  revocation-checker-sa-004.md  runtime-substrate.md  services-compliance-decomposition.md  sharp-pens-promise.md  slsa-provenance-trigger.md  sync-resolve-conflict-export.md  workproof-composite-value-removal.md  young-snails-wink.md  zkp-default-deny-sa-002.md  zkp-hex-normalization.md
.claude/: CLAUDE.md
.cursor/: cli.json  permissions.json  rules.md
.gemini/: settings.json
.github/: CODEOWNERS  pull_request_template.md
.husky/: commit-msg
.kimi/: AGENTS.md  skills-expected.json
00-archive/: README.md
01-docs/: README.md  _config.yml  conventions.md  roadmap.md  start-here.md
02-ops/: manifest.json
03-platform/: README.md  tsconfig.json
04-ship/: README.md  k8s-reference.yaml
05-audit/: AGENT-START.md  README.md
06-workstream/: README.md
SOP/: README.md
SOPs/: README.md
_cannon/: ecosystem-integration.md  gtm-q2-africa.md  implementation-truth.md  innovation-opportunities.md  remediation-plan-10x10.md
_delete/: 10-10-roadmap-2026-05-06.md  GEMINI.md  README.md  agentic-guide.md  auto-dev-cycle-2-2026-05-04.md  docs-structure-standard-TEMPLATE.md  specs-backend-architecture-TEMPLATE.md  uat-evidence-log-DUPLICATE.md
_sop/: README.md
agents/: README.md
agile-pm/: README.md
audit/: anti-inflation-audit-RESULTS-2026-05-11.md  anti-inflation-audit-prompt.md  bank-grade-certification-audit-methodology.md  forensic-audit-prompt-v1.md  no-bull-shit-forensic-audit-prompt.md  score-integrity-audit-prompt-v1.md
benchmarks/: README.md  bundle-size-budgets.json  history.json  latest-results.json  performance-budgets.json
config/: README.md  governance-spine.json  ops.manifest.json  paths.mjs  repo-kind.json  sor-map.json
deploy/: README.md
docs/: BENCHMARKS.md  Gemfile  INDEX.md  README.md  _config.yml  archive.md  roadmap.md  start-here.md
quality/: README.md  api-surface-baseline.json  kpi-metrics.json  release-2026-05-06-evidence.md
rust/: Cargo.toml  README.md  deny.toml  rust-toolchain.toml
rust/.cargo/: audit.toml
rust/gtcx-consensus/: Cargo.toml  README.md
rust/gtcx-consensus/src/: lib.rs  tests.rs
rust/gtcx-crypto/: Cargo.toml  README.md
rust/gtcx-crypto/benches/: hashing.rs  signing.rs
rust/gtcx-crypto/fuzz/: Cargo.toml
rust/gtcx-crypto/fuzz/fuzz_targets/: fuzz_chain_integrity.rs  fuzz_hashing.rs  fuzz_key_derivation.rs  fuzz_key_generation.rs  fuzz_secp256k1_verification.rs  fuzz_signature_verification.rs
rust/gtcx-crypto/src/: chain.rs  cloud_kms_keystore.rs  error.rs  fips.rs  keystore.rs  lib.rs  pkcs11_keystore.rs  pkcs11_state.rs
rust/gtcx-crypto/src/chain/: tests.rs
rust/gtcx-crypto/src/hashing/: mod.rs
rust/gtcx-crypto/src/keys/: mod.rs
rust/gtcx-crypto/src/keystore/: keystore_types.rs  memory_keystore.rs
rust/gtcx-crypto/src/provider/: aws_lc.rs  dalek.rs  mod.rs
rust/gtcx-crypto/src/signing/: ed25519.rs  mod.rs  p256.rs  secp256k1.rs
rust/gtcx-crypto/src/signing/ed25519/: tests.rs
rust/gtcx-crypto/tests/: cloud_kms_integration.rs
rust/gtcx-edge/: Cargo.toml  README.md
rust/gtcx-edge/src/: lib.rs  tests.rs
rust/gtcx-network/: Cargo.toml  README.md
rust/gtcx-network/src/: error.rs  lib.rs  message.rs  peer.rs  topic.rs
rust/gtcx-node/: Cargo.toml  README.md
rust/gtcx-node/src/: bulletproofs.rs  crypto.rs  groth16.rs  lib.rs  schnorr.rs  tests.rs  utils.rs  zkp.rs
rust/gtcx-zkp/: Cargo.toml  README.md  RNG.md  TRUSTED-SETUP.md
rust/gtcx-zkp/benches/: zkp.rs
rust/gtcx-zkp/src/: bulletproofs.rs  commitment.rs  error.rs  groth16.rs  lib.rs  schnorr.rs  tests.rs  trusted_setup.rs  types.rs  utils.rs
rust/gtcx-zkp/src/circuit_profiles/: certification.rs  lifecycle.rs  mod.rs  registry.rs  sample.rs  validate.rs
rust/gtcx-zkp/src/groth16/: mod.rs  ops.rs  utils.rs
rust/gtcx-zkp/src/tests/: bulletproofs.rs  circuit_profiles.rs  commitment.rs  differential.rs  error.rs  groth16.rs  mod.rs  property_based.rs  schnorr.rs  serialization.rs  sidechannel.rs  trusted_setup.rs  types.rs
rust/gtcx-zkp/src/witness/: commodity_origin.rs  mod.rs
scripts/: README.md  agent-bout-progress.mjs  agent-cli-path.mjs  agent-execution-bout.mjs  agent-git-push.mjs  agent-next-work.mjs  agent-session-start.mjs  agent-start.mjs  check-agent-bout-progress.mjs  check-agent-execution-bout.mjs  check-agent-launch-focus.mjs  check-agent-work-selection.mjs  check-coordination-hygiene.mjs  check-cross-repo-dependencies.mjs  open-downstream-prs.ts  (+5 more)
(+2739 files in other folders)
