[workspace]
members = [
    "gtcx-crypto",
    "gtcx-zkp",
    "gtcx-consensus",
    "gtcx-network",
    "gtcx-edge",
    "gtcx-node",
]
exclude = [
    "gtcx-crypto/fuzz"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gtcx-ecosystem/gtcx-core"
rust-version = "1.91"
authors = ["GTCX Protocol <engineering@gtcx.trade>"]
description = "GTCX Protocol - Cryptographic Verification Infrastructure"

[workspace.dependencies]
# Cryptography
ed25519-dalek = { version = "2.1", features = ["batch", "digest", "zeroize"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
sha2 = "0.10"
blake3 = "1.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# Zero-Knowledge Proofs (arkworks)
ark-ff = "0.4"
ark-ec = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-snark = "0.4"
ark-groth16 = "0.4"
ark-bn254 = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ark-crypto-primitives = "0.4"
bulletproofs = "5.0"
curve25519-dalek = "4.1"
merlin = "3.0"

# Networking
libp2p = { version = "0.54", default-features = false, features = [
    "tokio",
    "quic",
    "gossipsub",
    "identify",
    "noise",
    "tcp",
    "yamux",
    "dns",
] }
tokio = { version = "1.35", features = ["full"] }
quinn = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.12"

# Node.js bindings
napi = "2.14"
napi-derive = "2.14"

# WebAssembly
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Utilities
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
hex = "0.4"

# Testing
proptest = "1.4"
criterion = "0.5"
secp256k1 = { version = "0.29", features = ["rand"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true

[profile.bench]
lto = true
codegen-units = 1
