[package]
name = "gtcx-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GTCX Protocol - PANX Weighted PBFT Consensus"

[dependencies]
gtcx-crypto = { path = "../gtcx-crypto" }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
