[package]
name = "gtcx-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "GTCX Protocol - Weighted PBFT consensus engine for multi-stakeholder verification"
readme = "README.md"
keywords = ["consensus", "pbft", "blockchain", "distributed", "gtcx"]
categories = ["algorithms"]

[dependencies]
gtcx-crypto = { path = "../gtcx-crypto" }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
