[package]
name = "gtcx-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "GTCX Protocol - Cryptographic Primitives"
readme = "README.md"
keywords = ["cryptography", "ed25519", "signing", "hashing", "gtcx"]
categories = ["cryptography", "no-std"]

[dependencies]
# Signing
ed25519-dalek = { workspace = true }
k256 = { workspace = true }

# Hashing
sha2 = { workspace = true }
blake3 = { workspace = true }

# Randomness
rand = { workspace = true }

# Security
zeroize = { workspace = true }

# Serialization
serde = { workspace = true }
hex = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing (Principle 9: AI-Native)
tracing = { workspace = true }

# FIPS-validated backend (optional). Enabled with --features fips.
# Inherits FIPS 140-3 validation from AWS-LC CMVP #4816.
# See docs/security/fips-validation-boundary.md for the full algorithm
# mapping and ZKP exemption rationale.
aws-lc-rs = { version = "1.10", optional = true }

# PKCS#11 keystore backend (optional). Enabled with --features pkcs11.
# Wraps a PKCS#11 module (SoftHSM, CloudHSM, hardware HSM) so private keys
# can live inside an HSM and never leave its boundary. See
# docs/security/pkcs11-keystore.md for the design + integration guide.
cryptoki = { version = "0.10", optional = true }

# JSON serialization for FileSystemKeyStateStore (PKCS#11 state persistence).
# Enabled alongside cryptoki so the file-backed lifecycle store works
# without callers needing to add the dep themselves.
serde_json = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }
secp256k1 = { workspace = true }

[[bench]]
name = "signing"
harness = false

[[bench]]
name = "hashing"
harness = false

[features]
default = ["std"]
std = []

# FIPS 140-3 inherited validation via AWS-LC (CMVP #4816).
# When enabled, default_signing() and default_hashing() return aws-lc-rs-backed
# providers for Ed25519, SHA-256, and SHA-512. BLAKE3 falls through to the
# blake3 crate (BLAKE3 is not FIPS-approved at any module level — documented
# in docs/security/fips-validation-boundary.md as a supplementary, non-FIPS
# algorithm).
fips = ["dep:aws-lc-rs"]

# PKCS#11-backed KeyStore (optional). Enabled with --features pkcs11.
# Exposes Pkcs11KeyStore which delegates key generation, signing, and
# destruction to a PKCS#11 module loaded at runtime (SoftHSM, AWS CloudHSM,
# hardware HSM). Private keys never leave the HSM boundary. Closes AT-004
# / external Medium #1 — gtcx-core ships a hardware-backed keystore
# alongside the existing MemoryKeyStore.
pkcs11 = ["dep:cryptoki", "dep:serde_json"]
