[package]
name = "gtcx-edge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "GTCX Protocol - Edge runtime with resource-constrained device profiles and verification caching"
readme = "README.md"
keywords = ["edge", "wasm", "iot", "embedded", "gtcx"]
categories = ["embedded", "wasm"]

[dependencies]
gtcx-crypto = { path = "../gtcx-crypto" }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
