[package]
name = "gtcx-network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "GTCX Protocol - P2P networking types with topic-based pub/sub messaging"
readme = "README.md"
keywords = ["networking", "p2p", "pubsub", "messaging", "gtcx"]
categories = ["network-programming"]

[dependencies]
gtcx-crypto = { path = "../gtcx-crypto" }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# Networking dependencies (commented until needed)
# libp2p = { workspace = true }
# quinn = { workspace = true }
