[package]
name = "gtcx-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GTCX Protocol - Node.js Bindings (NAPI-RS)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gtcx-crypto = { path = "../gtcx-crypto" }

napi = { workspace = true, features = ["napi4"] }
napi-derive = { workspace = true }
hex = { workspace = true }

[build-dependencies]
napi-build = "2.1"
