[package]
name = "gtcx-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "GTCX Protocol - Node.js native bindings via NAPI-RS for cryptographic operations"
readme = "README.md"
keywords = ["napi", "nodejs", "bindings", "cryptography", "gtcx"]
categories = ["api-bindings"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gtcx-crypto = { path = "../gtcx-crypto" }
gtcx-zkp = { path = "../gtcx-zkp" }

napi = { workspace = true, features = ["napi4"] }
napi-derive = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }

[build-dependencies]
napi-build = "2.1"
