[package]
name = "gtcx-zkp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "GTCX Protocol - Zero-Knowledge Proof system with hash-commitment proofs"
readme = "README.md"
keywords = ["zero-knowledge", "zkp", "proofs", "cryptography", "gtcx"]
categories = ["cryptography"]

[dependencies]
gtcx-crypto = { path = "../gtcx-crypto" }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

# ZKP dependencies (arkworks)
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-snark = { workspace = true }
ark-groth16 = { workspace = true }
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
ark-crypto-primitives = { workspace = true, features = ["crh", "merkle_tree", "r1cs"] }

[dev-dependencies]
serde_json = { workspace = true }
