[package]
name = "gtcx-crypto-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.gtcx-crypto]
path = ".."

[[bin]]
name = "fuzz_signature_verification"
path = "fuzz_targets/fuzz_signature_verification.rs"
test = false
doc = false
bench = false
