[package]
name = "gtcx-crypto-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.gtcx-crypto]
path = ".."

[[bin]]
name = "fuzz_signature_verification"
path = "fuzz_targets/fuzz_signature_verification.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_key_generation"
path = "fuzz_targets/fuzz_key_generation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_secp256k1_verification"
path = "fuzz_targets/fuzz_secp256k1_verification.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_hashing"
path = "fuzz_targets/fuzz_hashing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_chain_integrity"
path = "fuzz_targets/fuzz_chain_integrity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_key_derivation"
path = "fuzz_targets/fuzz_key_derivation.rs"
test = false
doc = false
bench = false
